# st-cl-2025-2-lab

./: README.md  pyproject.toml
notebooks/: 0_intro_lab.ipynb  1_niveles_linguisticos.ipynb  1_niveles_linguisticos.py  2_stats_properties.ipynb  3_language_models_word_vectors.ipynb  4_preprocess_lm_neuronal.ipynb  6_transformers_con_hugginface.ipynb  7_local_llm_apps.ipynb
practicas/ALDO-MZ/P0/: README.md
practicas/ALDO-MZ/P1/: 1_niveles_linguisticos.ipynb  1_niveles_linguisticos.py  README.md
practicas/ALDO-MZ/P2/: 2_stats_properties.ipynb  2_stats_properties.py  README.md
practicas/ALDO-MZ/P3/: 3_language_models_word_vectors.ipynb  3_language_models_word_vectors.py  README.md
practicas/ALDO-MZ/P4/: 4_preprocess_lm_neuronal.ipynb  4_preprocess_lm_neuronal.py  README.md
practicas/ALDO-MZ/P5/: 5_tech_evolution.ipynb  5_tech_evolution.py  README.md
practicas/ALDO-MZ/P6/: 6_transformers_con_hugginface.ipynb  6_transformers_con_hugginface.py  README.md  app.py  requirements.txt
practicas/AlejandroTorres03/P0/: README.md
practicas/AlejandroTorres03/P1/: TSPLN_THJA_P1.ipynb  TSPLN_THJA_P1.py
practicas/AlejandroTorres03/P2/: README.md  TSPLN_THJA_P2.ipynb  TSPLN_THJA_P2.py
practicas/AlejandroTorres03/P3/: TSPLN_THJA_P3.ipynb  TSPLN_THJA_P3.py
practicas/AlejandroTorres03/P4/: TSPLN_THJA_P4.ipynb  TSPLN_THJA_P4.py
practicas/AlejandroTorres03/P5/: TSPLN_THJA_P5.ipynb  TSPLN_THJA_P5.py
practicas/AlejandroTorres03/P6/: README.md  TSPLN_THJA_P6.ipynb  TSPLN_THJA_P6.py  app.py
practicas/Aleksei115/P0/: README.md
practicas/Aleksei115/P1/: README.md  (+2 more)
(+181 files in other folders)
