[project]
name = "st-cl-2025-2-lab"
version = "0.1.0"
description = "Repositorio para prácticas de laboratorio de temas selectos de lingüística computacional"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "python-levenshtein>=0.26.1",
    "rich[jupyter]>=13.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sklearn-crfsuite>=0.5.0",
    "spacy>=3.8.4",
]
