[project]
name = "st-cl-2025-2-lab"
version = "0.1.0"
description = "Repositorio para prácticas de laboratorio de temas selectos de lingüística computacional"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elotl>=0.1.1",
    "datasets>=3.3.2",
    "gensim>=4.3.3",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.2.0",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "python-levenshtein>=0.26.1",
    "rich[jupyter]>=13.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "sklearn-crfsuite>=0.5.0",
    "spacy>=3.8.4",
    "transformers>=4.49.0",
    "wikiextractor>=3.0.6",
    "jupyterlab-vim>=4.1.4",
    "langchain-text-splitters>=0.3.8",
    "langchain-community>=0.3.21",
    "langgraph>=0.4.3",
    "langchain-ollama>=0.3.2",
    "langchain-chroma>=0.2.2",
]
